@@ -37,7 +37,6 @@
 
 package com.sun.jersey.impl.uri.rules;
 
-import com.sun.jersey.impl.uri.rules.PatternRulePair;
 import com.sun.jersey.impl.uri.PathPattern;
 import com.sun.jersey.impl.uri.rules.automata.AutomataMatchingUriTemplateRules;
 import com.sun.jersey.spi.uri.rules.UriRules;
